--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
             <selenium.version>3.8.1</selenium.version>
         <testng.version>6.13.1</testng.version>
         <webdrivermanager.version>2.1.0</webdrivermanager.version>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -36,6 +38,12 @@
         <artifactId>webdrivermanager</artifactId>
         <version>${webdrivermanager.version}</version>
     </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.9</version>
+        </dependency>
+
 
     </dependencies>
 
